<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="com.mutualmobile.barricade.sample.MainActivity">

  <Switch
    android:id="@+id/barricade_switch"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checked="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:text="@string/barricade"
    android:textSize="15sp" />

  <Button
    android:id="@+id/get_joke_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="12dp"
    android:text="@string/get_joke"
    android:textAllCaps="false"
    android:textSize="12sp" />

  <Button
      android:id="@+id/get_joke_categories_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="12dp"
      android:text="@string/get_joke_categories"
      android:textAllCaps="false"
      android:textSize="12sp" />

  <ProgressBar
    android:id="@+id/progress_bar"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="match_parent"
    android:layout_height="10dp"
    android:indeterminate="true"
    android:visibility="invisible" />

  <TextView
    android:id="@+id/joke_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:textSize="18sp"
    tools:text="-funny joke here-"/>
</LinearLayout>
